add functions for event handling and phrase uppercase
co-authored-by: Anahi Ruiz <anahi.sulikey@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<form>
 		<label for="phraseInput">A phrase</label>
 		<input id="phraseInput" type="text" name="phraseInput">
+		<button type="submit">Shout it out!</button>
 	</form>
 
 	<div id="yell" class="hidden">
